--- a/style/base.css
+++ b/style/base.css
@@ -40,3 +40,105 @@ body {
   border-bottom: 1px solid white;
   font-weight: bold;
 }
+.sidebar-content {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.node {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 40px 0;
+  padding: 10px;
+  text-align: center;
+  font-size: 14px;
+  width: 150px;
+}
+
+.node1 {
+  background-color: #b3e5fc; /* Light Blue */
+}
+
+.node2 {
+  background-color: #c8e6c9; /* Light Green */
+}
+
+.node3 {
+  background-color: #ffe0b2; /* Light Orange */
+}
+
+.node4 {
+  background-color: #ffccbc; /* Light Red */
+}
+
+.node5 {
+  background-color: #816868; /* Light Brown */
+}
+
+
+/* Styles for the edges */
+.edges {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  pointer-events: none;
+}
+
+#cy {
+  width: 100%;
+  height: 100%;
+}
+.hidden {
+  display: none;
+}
+#viewSelector {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+#student-graph {
+  display: none;
+}
+.student-node {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 50%;
+  margin: 10px auto;
+  font-size: 12px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.student-graph .student-node {
+  background-color: #ccc;
+  margin: 40px auto; /* Increase spacing between student nodes */
+}
+
+/* Example styles for different student nodes */
+#student-node1 {
+  background-color: #4CAF50; /* Green */
+}
+
+#student-node2 {
+  background-color: #2196F3; /* Blue */
+}
+
+#student-node3 {
+  background-color: #FF9800; /* Orange */
+}
+
+#student-node4 {
+  background-color: #f44336; /* Red */
+}
+
+#student-node5 {
+  background-color: #9E9E9E; /* Grey */
+}
