--- a/style/notebookSelector.css
+++ b/style/notebookSelector.css
@@ -5,8 +5,7 @@ body {
 .selector-container {
     display: flex;
     align-items: center;
-    gap: 0px;
-    margin: 20px;
+    gap: 10px;
     margin-top: 30px;
     padding: 10px;
     background-color: #f5f5f5;
@@ -55,4 +54,16 @@ body {
 .element-selector:focus {
     outline: none;
     border-color: #007bff;
+}
+
+.jp-Notebook {
+    padding-top: 50px !important;
+    /* Adjust this value if needed */
+}
+
+.jp-Toolbar {
+    position: fixed;
+    /* Ensure the toolbar is properly positioned */
+    z-index: 1;
+    /* Make sure the toolbar stays on top */
 }
