--- a/style/CodeCell.css
+++ b/style/CodeCell.css
@@ -12,7 +12,7 @@
 }
 
 .notebook-id-button {
-  width: 60px;
+  width: auto;
   display: inline-flex;
   justify-content: center;
   align-items: center;
