--- a/style/base.css
+++ b/style/base.css
@@ -12,31 +12,31 @@
 }
 
 body {
-font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 .cells-class {
-display: flex;
-flex-direction: column; /* Adjusted to column to stack header and tabs */
-background-color: #e0ebeb; /* Light cyan */
-padding: 10px;
-border-radius: 5px; /* Rounded corners */
+  display: flex;
+  flex-direction: column; /* Adjusted to column to stack header and tabs */
+  background-color: #e0ebeb; /* Light cyan */
+  padding: 10px;
+  border-radius: 5px; /* Rounded corners */
 }
 
 .class-header {
-font-size: 20px;
-font-weight: bold;
-margin-bottom: 10px; /* Spacing below header */
-background-color: #e0ebeb; /* Same light cyan background */
-padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px; /* Spacing below header */
+  background-color: #e0ebeb; /* Same light cyan background */
+  padding: 10px;
 }
 
 .class-tabs {
-display: flex;
-background-color: #e0ebeb; /* White background for tabs container */
-padding: 10px;
-align-items: center;
-overflow: auto;
+  display: flex;
+  background-color: #e0ebeb; /* White background for tabs container */
+  padding: 10px;
+  align-items: center;
+  overflow: auto;
 }
 
 .student-tab {
@@ -49,7 +49,7 @@ overflow: auto;
 }
 
 .student-tab:hover {
-background-color: #ddd;
+  background-color: #ddd;
 }
 
 .student-tab.active {
@@ -96,7 +96,6 @@ background-color: #ddd;
   background-color: #816868; /* Light Brown */
 }
 
-
 /* Styles for the edges */
 .edges {
   position: absolute;
@@ -141,15 +140,15 @@ background-color: #ddd;
 
 /* Example styles for different student nodes */
 #student-node1 {
-  background-color: #4CAF50; /* Green */
+  background-color: #4caf50; /* Green */
 }
 
 #student-node2 {
-  background-color: #2196F3; /* Blue */
+  background-color: #2196f3; /* Blue */
 }
 
 #student-node3 {
-  background-color: #FF9800; /* Orange */
+  background-color: #ff9800; /* Orange */
 }
 
 #student-node4 {
@@ -157,7 +156,7 @@ background-color: #ddd;
 }
 
 #student-node5 {
-  background-color: #9E9E9E; /* Grey */
+  background-color: #9e9e9e; /* Grey */
 }
 
 /* style.css */
